<resources>
    <string name="app_name">kwears</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_product">Product</string>
    <string name="productImageContentDescription">This shows each image of kwears</string>
    <string name="Not_Available">N/A</string>
    <string name="edit">Edit</string>
    <string name="favorite">Favorite</string>
    <string name="more">more</string>
    <string name="content_description_more">Contend Description More</string>
    <string name="content_description_favorite">Content Description Favorite</string>
    <string name="content_description_search">Content Description Search</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="title_activity_cart">CartActivity</string>
    <string name="hello">Hello</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_checkout">CheckoutActivity</string>
    <string name="button">Sign Up</string>
</resources>