<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.vineet.kwears.presentation.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_cart"
            app:destination="@id/navigation_cart" />
        <action
            android:id="@+id/action_navigation_home_to_signUpFragment"
            app:destination="@id/signUpFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.vineet.kwears.presentation.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_cart"
            app:destination="@id/navigation_cart" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.vineet.kwears.presentation.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <argument android:name="name" />
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_cart"
            app:destination="@id/navigation_cart" />
    </fragment>
    <fragment
        android:id="@+id/navigation_product"
        android:name="com.vineet.kwears.presentation.ui.product.ProductFragment"
        android:label="ProductFragment"
        tools:layout="@layout/fragment_product" >
        <action
            android:id="@+id/action_navigation_product_to_navigation_productitem"
            app:destination="@id/navigation_productitem" />
        <argument android:name="name" />
        <argument android:name="imageSrc"
            app:argType="string" />
        <action
            android:id="@+id/action_navigation_product_to_navigation_cart"
            app:destination="@id/navigation_cart" />
    </fragment>
    <fragment
        android:id="@+id/navigation_productitem"
        android:name="com.vineet.kwears.presentation.ui.productitem.ProductItemFragment"
        android:label="ProductItemFragment"
        tools:layout="@layout/fragment_productitem">
        <argument android:name="name" />
        <argument android:name="image_src" />
        <action
            android:id="@+id/action_navigation_productitem_to_navigation_cart"
            app:destination="@id/navigation_cart" />
    </fragment>
    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.vineet.kwears.presentation.ui.cart.CartFragment"
        android:label="fragment_cart"
        tools:layout="@layout/fragment_cart" >
    </fragment>
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.vineet.kwears.presentation.ui.signup.SignUpFragment"
        android:label="fragment_sign_up"
        tools:layout="@layout/fragment_sign_up" />


</navigation>